tree-sitter-betmod/test/corpus/mod.txt
==================
Const declaration
==================
my_const :: "value"
---

(source_file
  (const_declaration
    (identifier)
    (string)))

==================
Const declaration with simple type
==================
my_const: string: "value"
---

(source_file
  (const_declaration
    name: (identifier)
    type: (type_identifier)
    value: (string)))

==================
Const declaration with member access type
==================
my_const: parent.child: 123
---

(source_file
  (const_declaration
    (identifier)
    (member_access
      (identifier)
      (identifier))
    (number)))

==================
Package builtin
==================
@package("my-package")
---

(source_file
  (call
    (identifier_builtin)
    (string)))

==================
Version builtin
==================
@version("0.1.2")
---

(source_file
  (call
    (identifier_builtin)
    (string)))

==================
Version builtin multiline
==================
@version(
  "0.1.2"
)
---

(source_file
  (call
    (identifier_builtin)
    (string)))

==================
Require builtin with single argument
==================
@require(pkg.foo)
---

(source_file
  (call
    (identifier_builtin)
    (member_access
      (identifier)
      (identifier))))

==================
Require builtin with single string argument
==================
@require("pkg.foo")
---

(source_file
  (call
    (identifier_builtin)
    (string)))

==================
Require builtin with multiple arguments
==================
@require(pkg.foo, pkg.bar)
---

(source_file
  (call
    (identifier_builtin)
    (member_access
      (identifier)
      (identifier))
    (member_access
      (identifier)
      (identifier))))

==================
Export builtin with multiple arguments separated
==================
@export(
  pkg.foo,
  pkg.baz,
)
---

(source_file
  (call
    (identifier_builtin)
    (member_access
      (identifier)
      (identifier))
    (member_access
      (identifier)
      (identifier))))

==================
Export builtin with multiple arguments
==================
@export(
  pkg.foo,
  pkg.baz,
)
---

(source_file
  (call
    (identifier_builtin)
    (member_access
      (identifier)
      (identifier))
    (member_access
      (identifier)
      (identifier))))

==================
Multiple declarations and comments
==================
my_const :: "hello"
// a comment
@package("my-app")
---

(source_file
  (const_declaration
    (identifier)
    (string))
  (comment_line)
  (call
    (identifier_builtin)
    (string)))
